# chip-8

./: .gitignore  Cargo.toml  README.md  TODO.md
chip8eframe/: Cargo.toml  check.sh  index.html  rust-toolchain
chip8eframe/assets/: sw.js
chip8eframe/src/: about.rs  app.rs  config_window.rs  lib.rs  main.rs
chip8gui/: Cargo.toml
chip8gui/src/: main.rs
chip8sys/: Cargo.toml
chip8sys/src/: chip8.rs  chip8error.rs  decode.rs  lib.rs  roms.rs
src/: bitwise.rs  chip8.rs  decode.rs  lib.rs  main.rs  roms.rs
