[package]
name = "chip8eframe"
version = "0.1.0"
authors = ["Nicholas Licalsi <licalsinj@gmail.com>"]
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.85"

[[bin]]
name = "chip8eframe"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-wasip1"]

[dependencies]
# chip 8 specific
chip8sys = { path = "../chip8sys/" }

# audio
rodio = "0.21.1"
cpal = { version = "0.16", features = ["wasm-bindgen"] }

# wasm debug
console_error_panic_hook = "*"

# egui
egui = "0.32"
eframe = { version = "0.32", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
log = "0.4.27"

# You only need serde if you want app persistence:
serde = { version = "1.0.219", features = ["derive"] }
egui_extras = "0.32.1"

# random
getrandom = {version = "0.3.3", default-features = false, features = ["wasm_js"]}

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)

[lints]
workspace = true

