[package]
name = "chip8sys"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "*"
# random
# getrandom = { workspace = true, default-features = false, features = ["wasm_js"]}
# rand = "0.9.2"


# [dependencies.rand_core]
getrandom = { version = "0.3.3", default-features = false, features = ["wasm_js"] }

[lib]
name = "chip8sys"
path = "src/lib.rs"
